Added checks in index.html

--- a/resources/index.html
+++ b/resources/index.html
@@ -41,13 +41,18 @@ body {
   
   <label for="input_parameter">Input Parameter:</label><br>
   <label for="req1">req1:</label>
-  <input type="text" id="res1" name="res1" value=""><br>
+  <input type="text" id="req1" name="req1" value=""><br>
   <label for="req_type1">req_type1:</label>
-  <input type="text" id="res_type1" name="res_type1" value=""><br>
+  <input type="text" id="req_type1" name="req_type1" value=""><br>
   <label for="req_value1">req_value1:</label><br>
-  <textarea id="res_value1" name="res_value1" value="" rows="4" cols="50">
-  </textarea><br>
-
+  <textarea id="req_value1" name="req_value1" value="" rows="4" cols="50"></textarea><br>
+  <label for="checks">Checks:</label><br>
+  <label for="resp1">resp1:</label>
+  <input type="text" id="resp1" name="resp1" value=""><br>
+  <label for="resp_type1">resp_type1:</label>
+  <input type="text" id="resp_type1" name="resp_type1" value=""><br>
+  <label for="resp_value1">expected resp_value1:</label><br>
+  <textarea id="resp_value1" name="resp_value1" value="" rows="4" cols="50"></textarea><br>
   </div>
     <div class="split right">
   <label for="db_name">DB name:</label><br>
@@ -59,16 +64,14 @@ body {
   <label for="table_dto1">table_dto1:</label>
   <input type="text" id="table_dto1" name="table_dto1" value=""><br>
   <label for="table_data1">table_data1:</label><br>
-  <textarea id="table_data1" name="table_data1" value="" rows="4" cols="50">
-  </textarea><br><br>
+  <textarea id="table_data1" name="table_data1" value="" rows="4" cols="50"></textarea><br><br>
   
   <label for="table2">table2:</label>
   <input type="text" id="table2" name="table2" value=""><br>
   <label for="table_dto2">table_dto2:</label>
   <input type="text" id="table_dto2" name="table_dto2" value=""><br>
   <label for="table_data2">table_data2:</label><br>
-  <textarea id="table_data2" name="table_data2" value="" rows="4" cols="50">
-  </textarea><br>
+  <textarea id="table_data2" name="table_data2" value="" rows="4" cols="50"></textarea><br>
   
   <input type="submit" value="Submit">
   </div>
